# rs_service_client

./: Cargo.toml  LICENSE.md  README.md
src/: error.rs  lib.rs  service.rs  sparkplug.rs  uuids.rs
src/service/: auth.rs  cmdesc.rs  configdb.rs  directory.rs  discovery.rs  mqtt.rs  service_trait.rs
src/sparkplug/: util.rs
