[package]
name = "rs_service_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
reqwest = "0.12.4"
rumqttc = { version = "0.24.0", features = ["use-rustls"] }
sparkplug-rs = "0.4.0"
bytes = "1.6.0"
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
