[package]
name = "rs_service_client"
version = "0.1.0"
edition = "2021"
authors = ["Kavan Price"]
description = "This library provides a client for interacting with Factory+ services in Rust applications."
readme = "README.md"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
reqwest = "0.12.4"
sparkplug-rs = "0.4.0"
bytes = "1.6.0"
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
serde = { version = "1.0.200", features = ["derive"] }
paho-mqtt = { version = "0.12.5", features = ["vendored-ssl"] }
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
